--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,18 +1,24 @@
 .menu {
+    display: flex;
+    max-width: 100%;
+
 
     &__list {
+        max-width: 100%;
         list-style: none;
         padding: 0;
         margin: 0;
 
         display: flex;
-        justify-content: space-between;
-        gap: 8px;
         white-space: nowrap;
         // overflow: hidden;
     }
 
-    &__item {}
+    &__item {
+        & + & {
+            padding-left: 8px;
+        }
+    }
 
     &__link {
         text-decoration: none;
@@ -51,6 +57,9 @@
 
     }
 
+    &__more {
+        padding-left: 8px;
+    }
     &__more-list {
         list-style: none;
         padding: 0;
